Fix: overflow grid contact form

--- a/src/app/pages/home/contact/contact-form/contact-form.component.css
+++ b/src/app/pages/home/contact/contact-form/contact-form.component.css
@@ -1,17 +1,16 @@
 .contact-form {
-  
   padding: 2rem 1rem;
   background-color: #ffffff;
   border-radius: 1rem;
   max-width: 60rem;
   min-height: fit-content;
-  max-height: 50rem;
+  max-height: fit-content;
 }
 
-.rigth-border{
+.rigth-border {
   border-right: 1px solid rgb(189, 189, 189);
 }
 
-.form-column{
+.form-column {
   padding: 2rem;
 }
